overflow error corrected in scroller

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,4 +13,4 @@ $white1: #fff;
 $tab: 800px;
 $tab-small:600px;
 $tab-big:800px;
-$desktop:900px;
+$desktop:1024px;
